# gobcam

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  release-body.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: check.yml  release.yml
assets/: fluent-catalog.json  safe-mode-denylist.json
assets/demo/: README.md
assets/fluent/: manifest.toml
crates/pipeline/: Cargo.toml
crates/pipeline/examples/: perf_capture.rs  pg_appsrc_slots.rs  pg_v4l2_canvas.rs  pg_v4l2_slots.rs  pg_v4l2_slots_probe.rs  repro_appsrc_slots.rs  repro_idle_lazy_pumps.rs  repro_slot_trigger.rs  repro_v4l2_canvas.rs  repro_v4l2_slots.rs  repro_v4l2_slots_probe.rs
crates/pipeline/src/: animation.rs  cli.rs  effects.rs  firewall.rs  inputs.rs  ipc.rs  lib.rs  main.rs  overlay.rs  pipeline.rs  preview.rs  profile.rs  reactions.rs  runner.rs  slots.rs
crates/pipeline/src/assets/: apng.rs  bootstrap.rs  cache.rs  catalog.rs  fluent.rs  mod.rs
crates/pipeline/tests/: smoke.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  safe_mode.rs
crates/ui/: .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/ui/src/: App.svelte  app.css  main.ts
crates/ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/ui/src-tauri/capabilities/: default.json
crates/ui/src-tauri/icons/: icon.icns
crates/ui/src-tauri/src/: commands.rs  config.rs  daemon.rs  hotkeys.rs  ipc.rs  loopback.rs  main.rs  prefs.rs  setup.rs  tray.rs
crates/ui/src/capture/: tauriCore.ts
crates/ui/src/lib/: Animations.svelte  EmojiButton.svelte  HotkeyCapture.svelte  Preview.svelte  Settings.svelte  Setup.svelte  api.ts  emoji.ts  search.test.ts  search.ts
docker/: Dockerfile.build  Dockerfile.package
docs/: CHANGELOG.md  architecture.md  roadmap.md  step3-debug-report.md  troubleshooting.md  v4l2sink-thread-safety.md
packaging/aur/gobcam-bin/: .SRCINFO  PKGBUILD  PKGBUILD.in  gobcam-bin.install
packaging/deb/: Gobcam.desktop  postinst  prerm
packaging/etc/modprobe.d/: gobcam.conf
packaging/etc/modules-load.d/: gobcam.conf
playground/: 01-compositor-baseline.sh  02-compositor-multi-input.sh  03-valve-gated.sh  04-alpha-gated.sh  05-imagefreeze-overlay.sh  06-v4l2-multi-input.sh  README.md
scripts/: build-fluent-catalog.py  capture-demo.sh  capture-ui-screenshot.sh  check-hygiene.sh  fetch-demo-clip.sh  gobcam-setup  package.sh  perf-cascade.sh  run-checks.sh  setup-dev.sh  setup-host.sh  stage-sidecar.sh  sudoers-gobcam-dev  sync-emoji.sh  test-deb.sh
