[package]
name = "gobcam-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Gobcam Tauri UI shell — floating panel that drives the daemon over IPC"

[[bin]]
name = "gobcam-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["protocol-asset"] }
gobcam-protocol = { path = "../../protocol" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
